<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:gravity="fill_horizontal|center_horizontal">

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:id="@+id/tableLayout">

        <TableRow android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">
            <TextView
                android:textSize="25sp"
                android:text="@string/app_name"
                android:padding="10dp"
                android:layout_span="4"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:textColor="#ff0000"
                android:textStyle="bold"
                android:gravity="fill_horizontal" />
        </TableRow>

        <TableRow android:layout_width="wrap_content"
        android:layout_height="wrap_content"
            android:gravity="center_horizontal">
        <TextView
            android:textSize="18sp"
            android:text="@string/txtQServiceDesk"
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center" />
        <CheckBox
            android:padding="5dp"
            android:id="@+id/q1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end" />
    </TableRow>

    <TableRow android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
        <TextView
            android:textSize="18sp"
            android:text="@string/txtQCBPAOP"
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center" />
        <CheckBox
            android:layout_gravity="center_horizontal|end"
            android:padding="5dp"
            android:id="@+id/q2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>

    <TableRow android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
        <TextView
            android:textSize="18sp"
            android:text="@string/txtQCBPClosing"
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center" />
        <CheckBox
            android:layout_gravity="center_horizontal|end"
            android:padding="5dp"
            android:id="@+id/q3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>

        <TableRow android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal">
            <TextView
                android:textSize="18sp"
                android:text="@string/txtQEUServiceDown"
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center" />
            <CheckBox
                android:layout_gravity="center_horizontal|right"
                android:padding="5dp"
                android:id="@+id/q4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

    <TableRow android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal">
        <TextView
            android:textSize="18sp"
            android:text="@string/txtQEUCount"
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center" />
        <CheckBox
            android:layout_gravity="center_horizontal|end"
            android:padding="5dp"
            android:id="@+id/q5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>


    <TableRow android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
        <TextView
            android:textSize="18sp"
            android:text="@string/txtQEUGEST"
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center" />
        <CheckBox
            android:layout_gravity="center_horizontal|end"
            android:padding="5dp"
            android:id="@+id/q6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>

    <TableRow android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal">
        <TextView
            android:textSize="18sp"
            android:text="@string/txtQMIIntermittent"
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center" />
        <CheckBox
            android:layout_gravity="center_horizontal|end"
            android:padding="5dp"
            android:id="@+id/q7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>

    <TableRow android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
        <TextView
            android:textSize="18sp"
            android:padding="5dp"
            android:text="@string/txtQMIFailure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center" />
        <CheckBox
            android:layout_gravity="center_horizontal|end"
            android:padding="5dp"
            android:id="@+id/q8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>

    <TableRow android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
        <TextView
            android:textSize="18sp"
            android:padding="5dp"
            android:text="@string/txtWorkaround"
            android:layout_gravity="start|center" />

        <Spinner
            android:layout_gravity="center_horizontal|end"
            android:padding="5dp"
            android:id="@+id/workAround"
            android:entries="@array/txtWorkaroundOptions" />
   </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/txtMIRating"
                android:id="@+id/txtMIRating"
                android:layout_column="0"
                android:layout_span="4"
                android:gravity="center_horizontal"
                android:padding="10dp"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text=""
                android:id="@+id/txtRecommendation"
                android:layout_column="0"
                android:layout_span="4"
                android:gravity="center_horizontal" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnCalc"
                android:id="@+id/btnCalc"
                android:layout_column="0"
                android:layout_span="2" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_horizontal">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/btnReset"
                android:id="@+id/btnReset"
                android:layout_column="0"
                android:gravity="center_horizontal"
                android:layout_span="2" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/txtDisclaimer"
                android:id="@+id/txtInstructions"
                android:layout_column="0"
                android:padding="20dp"
                android:textSize="15sp"
                android:layout_span="2"
                android:gravity="center_horizontal" />
        </TableRow>

    </TableLayout>

</RelativeLayout>
